<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_intro"
    tools:context=".taikhoancanhan.SignUpActivity">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:orientation="vertical"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="30dp"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_gravity="center_horizontal"
                   android:padding="24dp"
                   android:background="@drawable/custom_edittext">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/ng_k"
                       android:textSize="30sp"
                       android:textAlignment="center"
                       android:textStyle="bold"
                       android:textColor="#df7154"/>
                   <FrameLayout
                       android:id="@+id/layoutImage"
                       android:layout_marginTop="20dp"
                       android:layout_gravity="center"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <com.makeramen.roundedimageview.RoundedImageView
                           android:id="@+id/imgProfile"
                           android:background="@drawable/backgroud_imge"
                           android:scaleType="centerCrop"
                           app:riv_oval="true"
                           android:layout_width="80dp"
                           android:layout_height="80dp"/>
                       <TextView android:id="@+id/textAddImage"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:textColor="@color/secondary_text"
                           android:textSize="13sp"
                           android:text="@string/th_m_nh_i_di_n"/>
                   </FrameLayout>
                   <EditText
                       android:id="@+id/signup_ho_va_ten"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginBottom="8dp"
                       android:background="@drawable/edittext_background"
                       android:ems="10"
                       android:hint="@string/h_t_n_ho_c_t_n_th_ng_g_i"
                       android:drawablePadding="8dp"
                       android:inputType="text"
                       android:paddingStart="20dp"
                      />
                   <EditText
                       android:id="@+id/signup_chuc_vu"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginBottom="8dp"
                       android:background="@drawable/edittext_background"
                       android:ems="10"
                       android:hint="(Vd: Là Ba hay mẹ hay cô chú...)"
                       android:drawablePadding="8dp"
                       android:inputType="text"
                       android:paddingStart="20dp"
                       />
                   <EditText
                       android:id="@+id/signup_nam_sinh"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginBottom="8dp"
                       android:background="@drawable/edittext_background"
                       android:ems="10"
                       android:hint="@string/ng_y_th_ng_n_m_sinh"
                       android:drawablePadding="8dp"
                       android:inputType="text"
                       android:paddingStart="20dp"
                       />
                   <EditText
                       android:hint="@string/tu_i_vd_18"
                       android:textColor="@color/black"
                       android:id="@+id/signup_dong_ho_ben"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginBottom="8dp"
                       android:background="@drawable/edittext_background"
                       android:ems="10"
                       android:inputType="number"
                       android:paddingStart="20dp"
                     />
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:id="@+id/signup_gioi_tinh"
                       android:background="@drawable/edittext_background"
                       android:layout_marginTop="10dp"
                       android:paddingStart="20dp"
                       android:ems="10"
                       android:inputType="text"
                       android:padding="8dp"
                       android:hint="@string/gi_i_t_nh_vd_nam"
                       android:drawablePadding="8dp"
                      />
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:id="@+id/signup_noi_o"
                       android:background="@drawable/edittext_background"
                       android:layout_marginTop="10dp"
                       android:paddingStart="20dp"
                       android:ems="10"
                       android:text="44/12 đường 16A bình hưng hoà A"
                       android:inputType="text"
                       android:padding="8dp"
                       android:hint="Nơi ở.."
                       android:drawablePadding="8dp"
                       android:textColor="@color/black"/>
                   <EditText android:id="@+id/signup_email"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="8dp"
                       android:layout_marginBottom="8dp"
                       android:background="@drawable/edittext_background"
                       android:ems="10"
                       android:hint="Email"
                       android:inputType="textEmailAddress"
                       android:paddingStart="20dp"
                       />
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:id="@+id/signup_password"
                       android:background="@drawable/edittext_background"
                       android:layout_marginTop="8dp"
                       android:padding="8dp"
                       android:inputType="textPassword"
                       android:paddingStart="20dp"
                       android:hint="@string/m_t_kh_u"
                       android:drawablePadding="8dp"
                       android:textColor="@color/black"/>
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="60dp"
                       android:ems="10"
                       android:text="@string/ng_k"
                       android:id="@+id/signup_button"
                       android:textSize="18sp"
                       android:layout_marginTop="10dp"
                       android:textColor="@color/white"
                       app:cornerRadius="20dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/loginRedirectText"
                       android:text="@string/l_ng_i_d_ng_ng_nh_p"
                       android:layout_gravity="center"
                       android:padding="8dp"
                       android:textColor="#df7154"
                       android:textSize="15sp"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
   </ScrollView>
</LinearLayout>