<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro" android:orientation="vertical"
    android:gravity="center"
    tools:context=".taikhoancanhan.SignInActivity">
    <TextView android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="34dp" android:text="LOGIN" android:textColor="@color/white" android:textSize="45sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView" app:srcCompat="@drawable/logo_login"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView">
        <EditText android:id="@+id/login_email" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp" android:layout_marginEnd="32dp" android:layout_marginBottom="8dp" android:background="@drawable/edittext_background" android:ems="10" android:hint="Email" android:inputType="textEmailAddress" android:paddingStart="20dp" android:textColorHint="#464646"/>
        <EditText android:id="@+id/login_password" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp" android:layout_marginEnd="32dp" android:layout_marginBottom="8dp" android:background="@drawable/edittext_background" android:ems="10" android:hint="Password" android:inputType="textPassword" android:paddingStart="20dp" android:textColorHint="#464646"/>
        <TextView android:id="@+id/forgot_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/forget_your_password" android:textAlignment="center" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
        <TextView android:id="@+id/signUpRedirectText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/do_you_have_a_register_register" android:textAlignment="center" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
        <Button android:id="@+id/login_button" style="@android:style/Widget.Button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="32dp" android:layout_marginTop="16dp" android:layout_marginEnd="32dp" android:layout_marginBottom="8dp" android:background="@drawable/btn_orange" android:text="@string/signin" android:textColor="#ffffff" android:textSize="24sp" android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>